--- a/source/documentation/test-dev-link.html.md.erb
+++ b/source/documentation/test-dev-link.html.md.erb
@@ -57,4 +57,4 @@ To speed up the process of converting from markdown link coding to the anchor li
     \[(.*)\]\((https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/)(.*\/)[0-9]+.[0-9]/oas/page#(.*)\)
 
 #### Replace
-    < % = make_a_link(“$3”, “$4”, “$1”) % >
+    < % = make_a_link("$3", "$4", "$1") % >
