--- a/source/documentation/make-updates-at-tax-year-end.html.md.erb
+++ b/source/documentation/make-updates-at-tax-year-end.html.md.erb
@@ -450,6 +450,26 @@ Marriage Allowance allows the customer to transfer some of their Personal Allowa
 
 Customers can create a Marriage Allowance claim using their name, date of birth and National Insurance number at any time during the tax year. To do this action, the software must call the [Create Marriage Allowance](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-disclosures-api/1.0/oas/page#tag/Marriage-Allowance/paths/~1individuals~1disclosures~1marriage-allowance~1{nino}/post) endpoint in the [Individuals Disclosures API](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-disclosures-api/). After the claim has been accepted by HMRC, the customer can view their Marriage Allowance in their tax calculations. Customers do not need to make a claim every year. Once a claim is made it automatically rolls forward, just as it would if submitted via Gov.UK.
 
+## Basis period reform: Capture Period of Account
+
+There may be some sole traders who have a period of account (may also be referred to as accounting period) that:
+- Starts and ends with the tax year
+- Does not align to the tax year
+- Changes from year to year 
+
+This information is important to support customers in submitting the correct information for the correct tax year. To allow a customer to inform HMRC of their period of account, software must use the 'Create or Update Periods of Account' endpoint within the [Business Details API](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/). This information must be provided at the end of year, after all four quarterly updates have been made.
+
+For each Self Employment business, software must first ask the customer if they have had a period of account that ended in the relevant tax year.  Only in the instance of the response being yes, must the software then go on to collect further information. 
+
+### Retrieve Periods of Account
+
+Once the software has successfully submitted the period of account information through to HMRC, the 'Retrieve Periods of Account' endpoint under the [Business Details API](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/) allows the customer to view their submitted period of account for each business.
+
+<a href="figures/BPA-flow.svg" target="blank"><img src="figures/BPA-flow.svg" alt="Periods of account process diagram" style="width:720px;" /></a>
+
+<a href="figures/BPA-flow.svg" target="blank">Open the Periods of account process diagram in a new tab</a>.
+
+
 ## Submit allowance and adjustments
 
 Some customers must submit an annual summary update. An annual summary is defined as a set of summary data for a tax year, containing allowances and adjustments broken down by category. They can provide updates more frequently if they wish, though they must make this submission before making their final declaration. The following endpoints enable customers to submit their annual allowances or adjustments: 
