--- a/source/documentation/prepare-for-mtd.html.md.erb
+++ b/source/documentation/prepare-for-mtd.html.md.erb
@@ -77,11 +77,11 @@ We then generate an OAuth 2.0 access token for the software which is specific to
 
 ## Correcting income source data
 
-At sign up to MTD for Income Tax there is a risk that the data captured and submitted to HMRC could contain errors leading to incorrect business income source data created. If a user notices that their income source data is incorrect and contains sources that have been added in error, they can contact HMRC at which point an operator will remove them.
+At sign-up to Making Tax Digital for Income Tax there is a risk that the data captured and submitted to HMRC could contain errors leading to the creation of incorrect business income source data. If a user notices that their income source data is incorrect or contains sources that have been added in error, they can contact HMRC to remove them.
 
-Due to this, we advise software to cross-check income sources quarterly using the Retrieve Business Details API to verify if any income sources have been removed. 
+We advise that software should cross-check income sources quarterly using the [Retrieve Business Details endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/2.0/oas/page#/paths/~1individuals~1business~1details~1%7Bnino%7D~1%7BbusinessId%7D/get) to verify if any income sources have been removed. 
 
-In the instance software sends through an update to an income source that has been removed, the software will receive a 404 error. In this case the software should call the Retrieve Business Details API to update the income source data.
+If software sends through an update to an income source that has been removed, the software will receive a 404 error. In this case the software should call the [Retrieve Business Details endpoint](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/business-details-api/2.0/oas/page#/paths/~1individuals~1business~1details~1%7Bnino%7D~1%7BbusinessId%7D/get) to update the income source data.
 
 
 ## MTD customer status
