Added updates to CGT guidance

--- a/source/documentation/make-updates-at-tax-year-end.html.md.erb
+++ b/source/documentation/make-updates-at-tax-year-end.html.md.erb
@@ -409,9 +409,9 @@ This currently applies only to people working at sea outside of the UK. For more
 
 Customers can use their software to submit information about working at sea at any time during the tax year. The software can use the following endpoints to enable customers to:
 
-* [Retrieve Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/get)
-* [Create and Amend Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/put)
-* [Delete Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/delete)
+- [Retrieve Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/get)
+- [Create and Amend Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/put)
+- [Delete Deductions](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api/1.0/oas/page#/paths/~1individuals~1deductions~1other~1%7Bnino%7D~1%7BtaxYear%7D/delete)
 
 ### State benefits
 
@@ -419,30 +419,33 @@ State benefits are sums of money paid by the government to people in certain cir
 
 Customers can use their software to submit information about incapacity benefits, state pension lump sums and other state benefits at any time during the tax year. The software can use the following endpoints to enable customers to:
 
-* [List State Benefits](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D/get)
-* [Create State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D/post)
-* [Amend State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D/put)
-* [Delete State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D/delete)
-* [Amend State Benefit Amounts](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1amounts/put)
-* [Delete State Benefit Amounts](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1amounts/delete)
-* [Ignore State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1ignore/post)
-* [Unignore State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1unignore/post)
+- [List State Benefits](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D/get)
+- [Create State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D/post)
+- [Amend State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D/put)
+- [Delete State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D/delete)
+- [Amend State Benefit Amounts](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1amounts/put)
+- [Delete State Benefit Amounts](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1amounts/delete)
+- [Ignore State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1ignore/post)
+- [Unignore State Benefit](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-state-benefits-api/1.0/oas/page#/paths/~1individuals~1state-benefits~1%7Bnino%7D~1%7BtaxYear%7D~1%7BbenefitId%7D~1unignore/post)
 
 ### Capital Gains Tax
 
 Capital Gains Tax is a tax on the profit when someone sells or disposes of an asset that has increased in value. Customers may need to report on the following types of asset:
 
 * residential property
-* other property 
-* listed and unlisted shares and securities 
+* other property
+* listed, and unlisted, shares and securities
+* crypto assets
 
 For more information about Capital Gains Tax, refer to [Capital Gains Tax: what you pay it on, rates and allowances (GOV.UK)](https://www.gov.uk/capital-gains-tax).
 
-Making Tax Digital for Income Tax customers can also report any losses they have made. This charge may be set against earlier or later years. When the customer sells or disposes of the whole or part of a UK residential property and is liable to pay Capital Gains Tax, they must tell HMRC within a specific time following the date of completion of the sale. For more information about the reporting requirement, refer to [Report and pay your Capital Gains Tax: If you sold a property in the UK on or after 6 April 2020 (GOV.UK)](https://www.gov.uk/report-and-pay-your-capital-gains-tax/if-you-sold-a-property-in-the-uk-on-or-after-6-april-2020). For non-resident customers, refer to [Tell HMRC about Capital Gains Tax on UK property or land if you’re not a UK resident (GOV.UK)](https://www.gov.uk/guidance/capital-gains-tax-for-non-residents-uk-residential-property), which advises on how these gains must be reported in year.
+Making Tax Digital for Income Tax customers can also report any losses they have made. If the customer reports net losses and net gains on separate transactions in the same tax year, HMRC will offset the net losses against the net gains in the Capital Gains Tax calculation. If an overall loss is made in the year, this charge may be set against, earlier or later years. 
 
-The customer can create, update, or delete their capital gains tax in software only after the end of the tax year. If they need to make changes during the year, they need to use [HMRC online services](/guides/income-tax-mtd-end-to-end-service-guide/documentation/tasks-outside-mtd-software.html#hmrc-online-services). In some cases, customers must report and pay before they make their final declaration. However, this information will still need to be included in their final declaration if they are a Self Assessment or Making Tax Digital for Income Tax customer.
+When the customer sells or disposes of the whole or part of a UK residential property and is liable to pay Capital Gains Tax, they must tell HMRC within a specific time following the date of completion of the sale. For more information about the reporting requirement, refer to [Report and pay your Capital Gains Tax: If you sold a property in the UK on or after 6 April 2020 (GOV.UK)](https://www.gov.uk/report-and-pay-your-capital-gains-tax/if-you-sold-a-property-in-the-uk-on-or-after-6-april-2020). For non-resident customers, refer to [Tell HMRC about Capital Gains Tax on UK property or land if you’re not a UK resident (GOV.UK)](https://www.gov.uk/guidance/capital-gains-tax-for-non-residents-uk-residential-property), which advises on how these gains must be reported in year.
 
-A Making Tax Digital for Income Tax customer can do the following: 
+The customer can create, update, or delete their capital gains tax in software only after the end of the tax year. If they need to make changes during the year, they need to use [HMRC online services](https://developer.service.hmrc.gov.uk/guides/income-tax-mtd-end-to-end-service-guide/documentation/tasks-outside-mtd-software.html#hmrc-online-services). When a gain is made from property disposal, customers must report and pay before they make their final declaration. However, this information will still need to be included in their final declaration if they are a Self Assessment or Making Tax Digital for Income Tax customer.
+
+A Making Tax Digital for Income Tax customer can do the following:
 
 * view Capital Gains Tax Residential Property Disposals for personal property disposal (PPD), non-PPD and other capital gains and disposals
 * create or amend Capital Gains Tax Residential Property Disposals for PPD, non-PPD and other capital gains and disposals
@@ -450,26 +453,57 @@ A Making Tax Digital for Income Tax customer can do the following:
 
 #### Viewing Capital Gains Tax
 
-At any time, a customer can view their capital gains tax information. In software, this information is retrieved using the following endpoints:
+At any time, a customer can view the capital gains tax information they have already submitted to HMRC. In software, this information is retrieved using the following endpoints:
 
 * [Retrieve All CGT Residential Property Disposals and Overrides (Includes PPD and Non-PPD)](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D/get)
 * [Retrieve Other Capital Gains and Disposals](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Other-Capital-Gains-and-Disposals/paths/~1individuals~1disposals-income~1other-gains~1%7Bnino%7D~1%7BtaxYear%7D/get)
 
 #### Creating or amending Capital Gains Tax
 
-Customers can create or amend the different types of Capital Gains Tax information after the end of the tax year. This change must be done before they make their final declaration. In software, this information is updated using the following endpoints:
+Customers can create or amend the different types of Capital Gains Tax information after the end of the tax year. This change must be done before they make their final declaration. If a customer wants to amend a Capital Gains Tax submission, this will not amend or overwrite what they have previously submitted. If a customer wants to make changes to a previously submitted submission before the end of the tax year, this must be done via the original submission.
 
-* [Create and Amend 'Report and Pay Capital Gains Tax on Property' Overrides](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D~1ppd/put)
+In software, this information is updated using the following endpoints:
+
+* [Create and Amend ‘Report and Pay Capital Gains Tax on Property’ Overrides](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D~1ppd/put)
 * [Create and Amend CGT Residential Property Disposals](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D/put)
 * [Create and Amend Other Capital Gains and Disposals](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Other-Capital-Gains-and-Disposals/paths/~1individuals~1disposals-income~1other-gains~1%7Bnino%7D~1%7BtaxYear%7D/put)
 
+We perform calculations for fungible assets such as listed and unlisted shares and crypto assets by examining the pooled cost of similar assets, rather than on an asset-by-asset basis.
+
 #### Deleting Capital Gains Tax
 
-Customers can delete different types of Capital Gains Tax only after the end of the tax year and only after they have created Capital Gains Tax using software. However, this change must be done before they make their final declaration.  In software, this deletion is made using the following endpoints:
+Customers can delete different types of Capital Gains Tax only after the end of the tax year and only after they have created Capital Gains Tax using software. However, this change must be done before they make their final declaration. In software, this deletion is made using the following endpoints:
 
-* [Delete 'Report and Pay Capital Gains Tax on Residential Property' Overrides](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D~1ppd/delete)
+* [Delete ‘Report and Pay Capital Gains Tax on Residential Property’ Overrides](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D~1ppd/delete)
 * [Delete CGT Residential Property Disposals](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Capital-Gains-on-Residential-Property-Disposals/paths/~1individuals~1disposals-income~1residential-property~1%7Bnino%7D~1%7BtaxYear%7D/delete)
 * [Delete Other Capital Gains and Disposals](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/individuals-capital-gains-income-api/1.0/oas/page#tag/Other-Capital-Gains-and-Disposals/paths/~1individuals~1disposals-income~1other-gains~1%7Bnino%7D~1%7BtaxYear%7D/delete)
+
+#### Business Asset Disposal Relief (BADR)
+
+BADR can reduce the Capital Gains Tax rate when the customer sells qualifying business assets or shares. For more information, refer to the [help sheet (GOV.UK)](https://www.gov.uk/government/publications/entrepreneurs-relief-hs275-self-assessment-helpsheet/hs275-business-asset-disposal-relief-2023).
+
+There is a [cumulative lifetime limit](https://www.gov.uk/business-asset-disposal-relief/how-to-claim) for qualifying gains, this limit refers to the total amount of relief for the following assets:
+
+* Residential Property
+* Other property assets and gains
+* Crypto Assets
+* Listed Shares and Securities
+* Unlisted Shares and Securities
+
+A claim for BADR must be made on or before the first anniversary of the 31 January following the tax year in which the disposal is made.
+
+#### Investor Relief (INV)
+
+INV offers a reduced Capital Gains Tax rate on the disposal of shares in a trading company that is not listed on a stock exchange.
+
+There is a [cumulative lifetime limit](https://www.gov.uk/government/publications/investors-relief-2020-hs308) for qualifying gains, this limit refers to the total amount of relief for the following assets:
+
+* Other property assets and gains
+* Listed Shares and Securities
+* Unlisted Shares and Securities
+
+> Note: BADR and INV cannot be applied to the same disposal.
+
 
 ### Marriage Allowance
 
