--- a/source/documentation/how-to-integrate.html.md.erb
+++ b/source/documentation/how-to-integrate.html.md.erb
@@ -50,7 +50,7 @@ HMRC must see evidence that your software sends fraud prevention headers and mus
 
 If you are creating a new Production application, you must comply with our [terms of use](/api-documentation/docs/terms-of-use) before we can issue you with Production credentials. 
 
-### Overview of developer journey to Production accesss
+### Overview of developer journey to Production access
 
 1. Sign into the [Developer Hub](/api-documentation) and register your application for Sandbox testing.
 2. [Create a test user which is an individual](https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/api-platform-test-user/1.0/oas/page#tag/create-test-user/operation/Createatestuserwhichisanindividual) to create test data.
@@ -77,7 +77,7 @@ Software providers have the option to either build all elements required to meet
 
 For a full end-to-end product, there are 2 distinct stages and the following APIs are required for each one:
 
-- In-year functionality (submitting periodic updates):
+- In-year functionality (submitting quarterly updates):
 
   - [Business Details (MTD)](/api-documentation/docs/api/service/business-details-api/)
   - [Obligations (MTD)](/api-documentation/docs/api/service/obligations-api/)
